HW-3: Review fixes